# nu-history-tool

./: README.md  pyproject.toml
src/nu_history_tool/: cli.py
